--- a/platilla/index.html
+++ b/platilla/index.html
@@ -169,28 +169,28 @@
 						<li class="nav-item">
 							<a href="components.html">
 								<i class="la la-table"></i>
-								<p>Components</p>
+								<p>Cursos</p>
 								<span class="badge badge-count">14</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a href="forms.html">
 								<i class="la la-keyboard-o"></i>
-								<p>Forms</p>
+								<p>Horario</p>
 								<span class="badge badge-count">50</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a href="tables.html">
 								<i class="la la-th"></i>
-								<p>Tables</p>
+								<p>Material</p>
 								<span class="badge badge-count">6</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a href="notifications.html">
 								<i class="la la-bell"></i>
-								<p>Notifications</p>
+								<p>Notificaciones</p>
 								<span class="badge badge-success">3</span>
 							</a>
 						</li>
